--- a/pages/about.html
+++ b/pages/about.html
@@ -172,19 +172,23 @@
 
     <footer class="container-fluid py-5">
       <div class="container-fluid top-footer">
-        <h3 class="display-4 py-1">join our news letter</h3>
+        <h3 class="display-4 py-1">SUBSCRIBE TO OUR NEWS LETTER</h3>
         <p class="px-5 py-2">
-          We will send you updates for your better finance management
+          For all new market updates, kindly enter your email in the box below
+          to join our mailing list.
         </p>
-        <div class="container footer-input py-2">
+        <form class="container footer-input py-2" id="email-subscribe">
           <input
             placeholder="Your email"
             type="email"
             class="form-control"
+            name="emailSubscribe"
             id="inputemail"
           />
-          <button type="submit" class="btn btn-danger">Submit</button>
-        </div>
+          <button id="submit-btn" type="submit" class="btn btn-danger">
+            Submit
+          </button>
+        </form>
       </div>
       <div class="container">
         <hr />
@@ -248,5 +252,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../main.js"></script>
+    <script src="../createaccount/bundle.js"></script>
   </body>
 </html>
