--- a/createaccount/estate.html
+++ b/createaccount/estate.html
@@ -260,6 +260,32 @@
           <div class="row mulstep-btn-cont">
             <div class="btn btn-left btn-prev">Previous</div>
 
+            <div class="btn btn-danger btn-right btn-next">Next</div>
+          </div>
+          <!-- below div ends step-2 -->
+        </div>
+        <div class="step step-3">
+          <h1>Bio data</h1>
+          <p>
+            please download the form below and email a filled copy to
+
+            <a href="mailto:smatradeng@gmail.com"
+              ><span class="button">smatradeng@gmail.com</span></a
+            >
+          </p>
+          <div class="field-wrapper row my-4">
+            <!-- this is used to help with the placement of fields -->
+            <div class="form-group col-lg-6">
+              <a href="">
+                <button class="btn btn-dark">Download biodata form</button>
+              </a>
+            </div>
+            <div class="form-group col-lg-6"></div>
+          </div>
+
+          <div class="row mulstep-btn-cont">
+            <div class="btn btn-left btn-prev">Previous</div>
+
             <div id="submit-btn" class="btn btn-danger btn-right">submit</div>
           </div>
           <!-- below div ends step-2 -->
