--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -442,8 +442,20 @@
             <h1>Bio data</h1>
             <p>
               please download the form below and email a filled copy to
-              @smatradeng@gmail.com
+
+              <a href="mailto:smatradeng@gmail.com"
+                ><span class="button">smatradeng@gmail.com</span></a
+              >
             </p>
+            <div class="field-wrapper row my-4">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-6">
+                <a href="">
+                  <button class="btn btn-dark">Download biodata form</button>
+                </a>
+              </div>
+              <div class="form-group col-lg-6"></div>
+            </div>
 
             <div class="row mulstep-btn-cont">
               <button class="btn btn-left btn-prev">Previous</button>
