test upload, form fixed

--- a/createaccount/minor.html
+++ b/createaccount/minor.html
@@ -57,8 +57,9 @@
                   name="custodianTitle"
                 >
                   <option selected>select Title</option>
-                  <option value="mr">mr</option>
-                  <option value="mrs">Mrs</option>
+                  <option value="Mr">Mr</option>
+                  <option value="Mrs">Mrs</option>
+                  <option value="Ms">Ms</option>
                 </select>
               </div>
 
@@ -83,8 +84,8 @@
                   name="titleOfMinorInvestor"
                 >
                   <option selected>select Title</option>
-                  <option value="master">master</option>
-                  <option value="miss">miss</option>
+                  <option value="Master">Master</option>
+                  <option value="Miss">Miss</option>
                 </select>
               </div>
 
@@ -116,51 +117,13 @@
               </div>
 
               <div class="col-lg-6">
-                <select
-                  class="form-control mt-4"
+                <input
+                  type="text"
                   id="sor"
+                  class="form-control mt-4"
                   name="stateOfOrigin"
-                  aria-label="Default select title"
-                >
-                  <option selected>state of origin</option>
-                  <option value="Abia">Abia</option>
-                  <option value="Adamawa">Adamawa</option>
-                  <option value="Akwa Ibom">Akwa Ibom</option>
-                  <option value="Anambra">Anambra</option>
-                  <option value="Bauchi">Bauchi</option>
-                  <option value="Benue">Benue</option>
-                  <option value="Borno">Borno</option>
-                  <option value="Cross River">Cross River</option>
-                  <option value="Delta">Delta</option>
-                  <option value="Ebonyi">Ebonyi</option>
-                  <option value="Edo">Edo</option>
-                  <option value="Ekiti">Ekiti</option>
-                  <option value="Enugu">Enugu</option>
-                  <option value="fct">Fct</option>
-                  <option value="Gombe">Gombe</option>
-                  <option value="Imo">Imo</option>
-                  <option value="Jigawa">Jigawa</option>
-                  <option value="Kaduna">Kaduna</option>
-                  <option value="Kano">Kano</option>
-                  <option value="Katsina">Katsina</option>
-                  <option value="Kebbi">Kebbi</option>
-                  <option value="Kogi">Kogi</option>
-                  <option value="Kwara">Kwara</option>
-                  <option value="Lagos">Lagos</option>
-                  <option value="Nasarawa">Nasarawa</option>
-                  <option value="Niger">Niger</option>
-                  <option value="Ogun">Ogun</option>
-                  <option value="Ondo">Ondo</option>
-                  <option value="Osun">Osun</option>
-                  <option value="Oyo">Oyo</option>
-                  <option value="Plateau">Plateau</option>
-                  <option value="Rivers">Rivers</option>
-                  <option value="Sokoto">Sokoto</option>
-                  <option value="Taraba">Taraba</option>
-                  <option value="Yobe">Yobe</option>
-                  <option value="Zamfara">Zamfara</option>
-                  <option value="Kebbi">Kebbi</option>
-                </select>
+                  placeholder="State of origin"
+                />
               </div>
             </div>
             <!-- row 3 ends here -->
@@ -177,16 +140,13 @@
                 />
               </div>
               <div class="form-group col-lg-6">
-                <select
-                  class="form-control"
+                <input
+                  type="text"
                   id="nationality"
                   name="nationality"
-                  aria-label="Default select nationality"
-                >
-                  <option selected>nationality</option>
-                  <option value="Nigeria">nigeria</option>
-                  <option value="Ghana">ghana</option>
-                </select>
+                  class="form-control"
+                  placeholder="Nationality"
+                />
               </div>
             </div>
             <!-- row 4 ends here  -->
