--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -88,9 +88,9 @@
                   name="title"
                 >
                   <option selected>select Title</option>
-                  <option value="mr">mr</option>
-                  <option value="mrs">Mrs</option>
-                  <option value="ms">Ms</option>
+                  <option value="Mr">Mr</option>
+                  <option value="Mrs">Mrs</option>
+                  <option value="Ms">Ms</option>
                 </select>
               </div>
 
