--- a/createaccount/minor.html
+++ b/createaccount/minor.html
@@ -17,7 +17,9 @@
   </head>
   <body>
     <header>
-      <img class="mainlogo" src="../images/logo.png" alt="" />
+      <a href="../index.html">
+        <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
+      </a>
       <h1>create a Minor account</h1>
     </header>
 
