--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
-    <!-- <script src="./stockData.js"></script> -->
+    <script src="./stockData.js"></script>
     <script src="./animations.js"></script>
     <script src="./createaccount/bundle.js"></script>
   </body>
