--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     <header>
+      <a href="../index.html">
+        <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
+      </a>
       <img class="mainlogo" src="../images/logo.png" alt="" />
       <h1>create a personal account</h1>
     </header>
