fixed responsive logo sizes, other minor changes

--- a/pages/services.html
+++ b/pages/services.html
@@ -112,9 +112,10 @@
               material information needed to ensure they meet their investment
               goals.
             </p>
-            <a class="arrows" href="">
+
+            <div class="arrows">
               <img src="../images/caseicon.png" alt="" />
-            </a>
+            </div>
           </div>
           <div class="items col-sm-12 col-lg-3 gx-1 gy-1">
             <h3 class="">Structured Products</h3>
@@ -122,9 +123,9 @@
               SMADAC Securities Limited “bespoke” investment instruments to
               enable our clients achieve their defined objectives.
             </p>
-            <a class="arrows" href="">
+            <div class="arrows">
               <img src="../images/circleicon.png" alt="" />
-            </a>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -134,9 +135,9 @@
               In line with the investment objective of our clients, we offer
               specific service in debt instruments/fixed income securities.
             </p>
-            <a class="arrows" href="">
+            <div class="arrows">
               <img src="../images/incomicon.png" alt="" />
-            </a>
+            </div>
           </div>
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Unquoted Securities</h3>
@@ -145,9 +146,9 @@
               and invest into the shares of those companies or assets that are
               not traded on the open market (unquoted)
             </p>
-            <a class="arrows" href="">
+            <div class="arrows">
               <img src="../images/securityicon.png" alt="" />
-            </a>
+            </div>
           </div>
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Wealth Advisory and Financial Planning</h3>
@@ -156,9 +157,9 @@
               their long term objectives and needs while meeting their ongoing
               obligations.
             </p>
-            <a class="arrows" href="">
+            <div class="arrows">
               <img src="../images/advisoricon.png" alt="" />
-            </a>
+            </div>
           </div>
           <div class="items col-sm-12 col-lg-3 gy-1">
             <h3 class="">Stockbroking Services</h3>
@@ -168,65 +169,11 @@
               strong investor support and ensure a successful flotation for
               clients.
             </p>
-            <a class="arrows" href="">
+            <div class="arrows">
               <img src="../images/stockicon.png" alt="" />
-            </a>
+            </div>
           </div>
         </div>
-
-        <!-- <div class="items col-sm-12 col-lg-3">
-          <h3 class="">Portfolio Management and Advisory</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam,
-            modi.
-          </p>
-          <a class="arrows" href="">
-            <img src="./images/up-arrow.png" alt="" />
-          </a>
-        </div> -->
-
-        <!-- <div class="items col-sm-12 col-lg-3">
-          <h3>Structured Product</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, rem.
-          </p>
-          <a href="" class="arrows">
-            <img src="./images/up-arrow.png" alt="" />
-          </a>
-        </div>
-
-        <div class="items col-sm-12 col-lg-3">
-          <h3>Fixed Income Securities</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-            aut et neque dolore, ipsa vero.
-          </p>
-          <a href="" class="arrows">
-            <img src="./images/up-arrow.png" alt="" />
-          </a>
-        </div>
-
-        <div class="items col-sm-12 col-lg-3">
-          <h3>Unquoted Securities</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-            quod repudiandae quis accusantium impedit quibusdam?
-          </p>
-          <a href="" class="arrows">
-            <img src="./images/up-arrow.png" alt="" />
-          </a>
-        </div>
-
-        <div class="items col-sm-12 col-lg-3">
-          <h3>Wealth Advisory and Financial Planning</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae,
-            doloremque.
-          </p>
-          <a href="" class="arrows">
-            <img src="./images/up-arrow.png" alt="" />
-          </a>
-        </div>-->
       </div>
     </section>
 
