--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -20,7 +20,7 @@
       <a href="../index.html">
         <img class="mainlogo" src="../images/logo.png" alt="smatrade logo" />
       </a>
-      <img class="mainlogo" src="../images/logo.png" alt="" />
+
       <h1>create a personal account</h1>
     </header>
 
@@ -393,7 +393,7 @@
           </div>
           <!-- below div ends step-1 -->
           <div class="row mulstep-btn-cont">
-            <div class="btn btn-danger btn-right btn-next">Next</div>
+            <button class="btn btn-danger btn-right btn-next">Next</button>
           </div>
         </div>
 
