--- a/pages/signup.html
+++ b/pages/signup.html
@@ -96,25 +96,42 @@
       <div class="container-fluid signup-wrapper">
         <h1>select account type:</h1>
         <div class="container-fluid row">
-          <div class="signup-card col-lg-6 col-sm-12">
+          <div
+            class="signup-card col-lg-6 col-sm-12"
+            onclick="location.href='../createaccount/personal.html';"
+            style="cursor: pointer"
+          >
             <a href="../createaccount/personal.html">
               <img src="../images/personicon.png" alt="" />
             </a>
             <h3>Personal account</h3>
           </div>
-          <div class="signup-card col-lg-6 col-sm-12">
+
+          <div
+            class="signup-card col-lg-6 col-sm-12"
+            onclick="location.href='../createaccount/corporate.html';"
+            style="cursor: pointer"
+          >
             <a href="../createaccount/corporate.html">
               <img src="../images/coorperateicon.png" alt="" />
             </a>
             <h3>Corporate Account</h3>
           </div>
-          <div class="signup-card col-lg-6 col-sm-12">
+          <div
+            class="signup-card col-lg-6 col-sm-12"
+            onclick="location.href='../createaccount/estate.html';"
+            style="cursor: pointer"
+          >
             <a href="../createaccount/estate.html">
               <img src="../images/estateicon.png" alt="" />
             </a>
             <h3>Estate Account</h3>
           </div>
-          <div class="signup-card col-lg-6 col-sm-12">
+          <div
+            class="signup-card col-lg-6 col-sm-12"
+            onclick="location.href='../createaccount/minor.html';"
+            style="cursor: pointer"
+          >
             <a href="../createaccount/minor.html">
               <img src="../images/minoricon.png" alt="" />
             </a>
