--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
           <h3>Get Started!</h3>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
+          <div class="linediv">
+            <img src="./images/Line.png" alt="" />
+          </div>
           <h3>Choose A Trade</h3>
           <p>
             We have designed several products to meet our clients' lifestyle and
@@ -186,6 +189,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
+          <div class="linediv">
+            <img src="./images/Line.png" alt="" />
+          </div>
           <h3>Open An Account</h3>
           <p>
             There is an account tailored for every client. Open a personal or
@@ -196,6 +202,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
+          <div class="linediv">
+            <img src="./images/Line.png" alt="" />
+          </div>
           <h3>Fund Your Account</h3>
           <p>
             There are numerous ways to fund your account. Funding enables you
@@ -206,6 +215,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
+          <div class="linediv">
+            <img src="./images/Line.png" alt="" />
+          </div>
           <h3>Receive Return</h3>
           <p>
             You can easily receive your returns on investment with your local
@@ -216,6 +228,9 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-6 items">
+          <div class="linediv">
+            <img src="./images/Line.png" alt="" />
+          </div>
           <h3>Follow The Market</h3>
           <p>
             Market research is an integral part of our business as it helps our
@@ -358,7 +373,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./main.js"></script>
-    <script src="./stockData.js"></script>
+    <!-- <script src="./stockData.js"></script> -->
     <script src="./animations.js"></script>
     <script src="./createaccount/bundle.js"></script>
   </body>
