--- a/pages/resources.html
+++ b/pages/resources.html
@@ -27,9 +27,9 @@
       <div class="create-info-wrapper">
         <div class="filter-resources-container">
           <select
-            class="form-control"
+            class="form-select"
             id="filter-form"
-            aria-label="Default select nationality"
+            aria-label="Default select for form type"
           >
             <option value="E-dividend" selected>E-dividend</option>
             <option value="fgn">FGN Savings Bond Forms</option>
