--- a/pages/about.html
+++ b/pages/about.html
@@ -89,10 +89,10 @@
       <header class="container-fluid about-header">
         <div class="container-fluid row">
           <div class="text-container col-lg-6 col-sm-12">
-            <h3 class="text-light">Grand Masters Of Trade</h3>
+            <h3 class="grand-text text-light">Grand Masters Of Trade</h3>
 
             <a href="../pages/signup.html">
-              <button class="btn btn-danger py-3 px-5">Get started</button>
+              <button class="btn btn-danger">Get started</button>
             </a>
           </div>
           <div class="container-fluid col-lg-6 col-sm-12 image-container">
